[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.5.4", features = ["derive"] }
core = { path = "../core" }
devices = { path = "../devices" }
device_interfaces = { path = "../device_interfaces" }

[[bin]]
name = "core"
path = "src/main.rs"
