[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
device_interfaces = { path = "../device_interfaces" }
core = { path = "../core" }
wasm-bindgen = "0.2.84"

[profile.release]